sumo/tests/traci/MoveNode/InvalidPositionFormat/testclient_out.traci
TraCITestClient output file. Date: Tue Feb 03 22:30:54 2009


-> Command sent: <SimulationStep>:
  TargetTime=1 PosFormat=100
.. Answered with error to command (1), [description: Error: unsupported return format requested.]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
